# learning-cplusplus

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  build2.yml  something.sh
cmake/check_source/: CMakeLists.txt  main.c
gtest-linking/: .gitignore  Makefile  README.md  a.cpp  a_test.cpp  b.cpp
notes/: alignment.md  ebo.md  heap.md  profile.md  stl.md
sdl/: CMakeLists.txt  README.md
sdl/src/: audio_capture.cpp
src/: adl.cpp  alignment.cpp  all_of.cpp  allocator.cpp  back-inserter.cpp  bind.cpp  bitset.cpp  chained-extension.cpp  condition_variable.cpp  constructors.cpp  coroutines.cpp  custom-pair.cpp  dist.cpp  distribution.cpp  double-double.cpp  ebo.cpp  enable_if.cpp  expected.cpp  float-nearest.cpp  for.cpp  forward-list.cpp  forward.cpp  futures.cpp  http-server.cpp  if-with-init.cpp  if.cpp  init.cpp  init_list.cpp  inline-ns.cpp  inline-var.cpp  inline-var.h  iota.cpp  iterator.cpp  lambda.cpp  least-squares.cpp  locks.cpp  lower_bound.cpp  map.cpp  move_priority_queue.cpp  newtons.cpp  (+43 more)
tests/: something_test.cpp
